# fausty

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.procure/: __init__.py
cmake/: App.cmake  Config.cmake  Examples.cmake  ExeApp.cmake  ExeRack.cmake  Fausty.cmake  Glfw.cmake  ImGui.cmake  ImKnobs.cmake  ImNodes.cmake  ImPlot.cmake  Library.cmake  Rack.cmake  RtAudio.cmake  Runner.cmake  Sdl.cmake  Shell.cmake  Standard.cmake  System.cmake  VST3SDK.cmake  View.cmake  Vst3.cmake  Widget.cmake  X11.cmake  XTensor.cmake
docs/: DEBUGGING.md  DEV.md  FAUST.md  MISC.md  NOTES.md  VST3SDK.md
examples/: CMakeLists.txt  app.cpp  graph.cpp  ports.cpp  rtplaysaw.cpp  xtbuffer.cpp
examples/bubble/: CMakeLists.txt  README.md  bubble_dsp.h
examples/bubble/format/exe/: CMakeLists.txt  main.cpp
examples/chain/: README.md  chain.dsp  chain_dsp.h
examples/chain/format/exe/: CMakeLists.txt  main.cpp
examples/daw/: README.md  flanger_dsp.h  phaser_dsp.h
examples/daw/format/exe/: CMakeLists.txt  main.cpp
examples/frenchbell/: README.md  frenchbell_dsp.h
examples/frenchbell/format/exe/: CMakeLists.txt  main.cpp
examples/multi/: README.md  freeverb_dsp.h  osc_dsp.h
examples/multi/cmake/: Common.cmake
examples/multi/format/exe/: CMakeLists.txt  main.cpp
examples/osc/: README.md  osc_dsp.h
examples/osc/format/exe/: CMakeLists.txt  main.cpp
examples/panner/: CMakeLists.txt  app.cpp  app.h  main.cpp
examples/panner/format/vst3/: CMakeLists.txt  plug.cpp  plug_view_impl.cpp  plug_view_impl.h
examples/panner/vst3/: CMakeLists.txt  parameters.h  plug.cpp  plug.h  plug_editor.cpp  plug_editor.h  plug_view.cpp  plug_view.h  rack.cpp  rack.h  rackeditor.cpp  rackeditor.h  rackview.cpp  rackview.h  version.h
examples/panner/windows/: CMakeLists.txt
examples/panner/windows/vst3/: plug.cpp  rackeditor_impl.cpp  rackeditor_impl.h  rackview_impl.cpp  rackview_impl.h
examples/panner/x11/vst3/: CMakeLists.txt  plug.cpp  plug_editor_impl.cpp  plug_editor_impl.h  plug_view_impl.cpp  rackview_impl copy.cpp  rackview_impl.cpp  rackview_impl.h
examples/rawdaw/: freeverb_dsp.h  frenchbell_dsp.h
src/fausty/: CMakeLists.txt  audio.cpp  audio.h  config.h  part.cpp  part.h  reflect.h
src/fausty/app/: CMakeLists.txt  app.cpp  app.h  faustyapp.cpp  faustyapp.h
src/fausty/app/format/exe/: CMakeLists.txt  exe_app_impl.cpp  exe_app_impl.h
src/fausty/context/: CMakeLists.txt  context.h  imgui_context.cpp  imgui_context.h  imnodes_context.cpp  imnodes_context.h  implot_context.cpp  implot_context.h
src/fausty/event/: event.h  window_event.h
src/fausty/rack/: CMakeLists.txt  audio_pin.h  audio_port.h  graph.cpp  graph.h  model.h  model_manufacturer.cpp  model_manufacturer.h  node.cpp  node.h  pin.cpp  pin.h  port.h  rack.cpp  rack.h  wire.cpp  wire.h
src/fausty/rack/control/: bargraph_base.h  box_base.h  button.h  button_base.h  check_button.h  control.h  frame_box.h  h_bargraph.h  h_box.h  h_slider.h  knob.h  num_display.h  num_entry.h  range_base.h  slider_base.h  tab_box.h  text_display.h  toggle_button.h  v_bargraph.h  v_box.h  v_slider.h
src/fausty/rack/format/exe/: CMakeLists.txt  exe_rack.cpp  exe_rack.h
src/fausty/rack/module/: audio_device.cpp  audio_device.h  destination.h  device.h  dsp.h  faust_dsp.cpp  faust_dsp.h  faust_dsp_ui.cpp  faust_dsp_ui.h  faust_ui.h  module.cpp  module.h  module_manufacturer.cpp  module_manufacturer.h
src/fausty/shell/: CMakeLists.txt  base_window.cpp  base_window.h  glfw_window.cpp  glfw_window.h  sdl_window.cpp  sdl_window.h  shell.h  window.cpp  window.h
src/fausty/shell/platform/windows/: CMakeLists.txt  Runner.rc  utils.cpp  win32_window.cpp  win32_window.h
src/fausty/shell/platform/windows/dx12/: CMakeLists.txt  dx12_window.cpp  dx12_window.h
src/fausty/shell/platform/windows/gl3/: CMakeLists.txt  gl3_window.cpp  gl3_window.h
src/fausty/shell/platform/x11/: CMakeLists.txt  x11_window.cpp  x11_window.h
src/fausty/shell/platform/x11/gl3/: CMakeLists.txt  gl3_window.cpp  gl3_window.h
src/fausty/system/: CMakeLists.txt  imgui_system.cpp  imgui_system.h  imnodes_system.cpp  imnodes_system.h  implot_system.cpp  implot_system.h  system.h
src/fausty/view/: CMakeLists.txt  faustyview.cpp  faustyview.h  model_view.cpp  model_view.h  rack_view.cpp  rack_view.h  view.h
src/fausty/view/widget/: h_bargraph_widget.cpp  h_box_widget.cpp  module_widget.cpp  module_widget.h  num_entry_widget.cpp  rack_widget.cpp  rack_widget.h  widget.h  widget_builder.h  widget_manager.cpp
src/fausty/vst3/: CMakeLists.txt  plug_editor.cpp  plug_editor.h  plug_view.cpp  plug_view.h  rackeditor.cpp  rackeditor.h  rackview.cpp  rackview.h
src/fausty/widget/: CMakeLists.txt  box_widget.h  button_widget.cpp  check_button_widget.cpp  h_bargraph_widget.cpp  h_box_widget.cpp  h_slider_widget.cpp  knob_widget.cpp  module_widget.cpp  module_widget.h  num_entry_widget.cpp  rack_widget.cpp  rack_widget.h  v_bargraph_widget.cpp  v_box_widget.cpp  v_slider_widget.cpp  widget.cpp  widget.h  widget_builder.cpp  widget_builder.h  widget_manager.cpp  widget_manager.h  widget_manufacturer.cpp  widget_manufacturer.h
src/fausty/widget/view/: faustyview.cpp  model_view.cpp  rack_view.cpp  rack_view.h  view.h
src/imgui/: CMakeLists.txt
src/imknobs/: CMakeLists.txt
src/imnodes/: CMakeLists.txt
src/implot/: CMakeLists.txt
