
#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[project]
name = "fausty"
version = "0.1.0"
description = "Fausty"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = []
authors = [{ name = "Kurtis Fields", email = "kurtisfields@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.optional-dependencies]
dev = ["black ~=22.12.0"]
test = ["pytest ~=7.2.1"]

[project.urls]
homepage = "https://github.com/kfields/fausty"
documentation = "https://kfields.github.io/fausty/"
repository = "https://github.com/kfields/fausty"
changelog = "https://github.com/kfields/fausty/blob/main/CHANGELOG.md"

#[tool.hatch.version]
#path = "fausty/__about__.py"

[tool.hatch.envs.default]
path = ".venv"
dependencies = ["pytest", "pytest-cov"]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=deeper --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[tool.hatch.envs.docs]
dependencies = ["sphinx", "furo", "sphinxcontrib-apidoc", "sphinxemoji"]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build docs docs/_build"

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["procure/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ ~= .__main__.:", "if TYPE_CHECKING:"]
